Lesson 7 (DB) (#6)
* Implement gRPC procedures

* Implement Repo methods

* Use Repo in api; Init Repo in cmd

* Fix linter errors

* Implement gRPC for Verdict; Implement Repo methods for Verdict
